mapFilter/mapFilterParser.py
# Generated from mapFilter.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class mapFilterParser ( Parser ):

    grammarFileName = "mapFilter.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'map'", "'('", "','", "')'", "'filter'", 
                     "'lambda'", "':'", "'.upper()'", "'.lower()'", "'.capitalize()'", 
                     "'sorted('", "'len('", "'sum('", "'max('", "'min('", 
                     "'.replace('", "'.split('", "'.join('", "'abs('", "'round('", 
                     "' and '", "' or '", "'['", "']'", "'%'", "'**'", "'.'", 
                     "'()'", "'=='", "'!='", "'<'", "'>'", "'<='", "'>='", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'*'", "'/'", "'+'", "'-'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "INT", "ID", 
                      "FLOAT", "STRING", "MUL", "DIV", "ADD", "SUB", "NEWLINE", 
                      "WS" ]

    RULE_prog = 0
    RULE_stat = 1
    RULE_mapFunction = 2
    RULE_filterFunction = 3
    RULE_lambdaExpr = 4
    RULE_function = 5
    RULE_op = 6
    RULE_iterable = 7
    RULE_list = 8
    RULE_tuple = 9
    RULE_elements = 10
    RULE_var = 11
    RULE_expr = 12

    ruleNames =  [ "prog", "stat", "mapFunction", "filterFunction", "lambdaExpr", 
                   "function", "op", "iterable", "list", "tuple", "elements", 
                   "var", "expr" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    INT=35
    ID=36
    FLOAT=37
    STRING=38
    MUL=39
    DIV=40
    ADD=41
    SUB=42
    NEWLINE=43
    WS=44

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(mapFilterParser.EOF, 0)

        def stat(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(mapFilterParser.StatContext)
            else:
                return self.getTypedRuleContext(mapFilterParser.StatContext,i)


        def getRuleIndex(self):
            return mapFilterParser.RULE_prog

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProg" ):
                listener.enterProg(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProg" ):
                listener.exitProg(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProg" ):
                return visitor.visitProg(self)
            else:
                return visitor.visitChildren(self)




    def prog(self):

        localctx = mapFilterParser.ProgContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_prog)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 27 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 26
                self.stat()
                self.state = 29 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 8796093022242) != 0)):
                    break

            self.state = 31
            self.match(mapFilterParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def mapFunction(self):
            return self.getTypedRuleContext(mapFilterParser.MapFunctionContext,0)


        def NEWLINE(self):
            return self.getToken(mapFilterParser.NEWLINE, 0)

        def filterFunction(self):
            return self.getTypedRuleContext(mapFilterParser.FilterFunctionContext,0)


        def getRuleIndex(self):
            return mapFilterParser.RULE_stat

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStat" ):
                listener.enterStat(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStat" ):
                listener.exitStat(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStat" ):
                return visitor.visitStat(self)
            else:
                return visitor.visitChildren(self)




    def stat(self):

        localctx = mapFilterParser.StatContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_stat)
        try:
            self.state = 40
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [1]:
                self.enterOuterAlt(localctx, 1)
                self.state = 33
                self.mapFunction()
                self.state = 34
                self.match(mapFilterParser.NEWLINE)
                pass
            elif token in [5]:
                self.enterOuterAlt(localctx, 2)
                self.state = 36
                self.filterFunction()
                self.state = 37
                self.match(mapFilterParser.NEWLINE)
                pass
            elif token in [43]:
                self.enterOuterAlt(localctx, 3)
                self.state = 39
                self.match(mapFilterParser.NEWLINE)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MapFunctionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def lambdaExpr(self):
            return self.getTypedRuleContext(mapFilterParser.LambdaExprContext,0)


        def iterable(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(mapFilterParser.IterableContext)
            else:
                return self.getTypedRuleContext(mapFilterParser.IterableContext,i)


        def getRuleIndex(self):
            return mapFilterParser.RULE_mapFunction

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMapFunction" ):
                listener.enterMapFunction(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMapFunction" ):
                listener.exitMapFunction(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMapFunction" ):
                return visitor.visitMapFunction(self)
            else:
                return visitor.visitChildren(self)




    def mapFunction(self):

        localctx = mapFilterParser.MapFunctionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_mapFunction)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 42
            self.match(mapFilterParser.T__0)
            self.state = 43
            self.match(mapFilterParser.T__1)
            self.state = 44
            self.lambdaExpr()
            self.state = 45
            self.match(mapFilterParser.T__2)
            self.state = 46
            self.iterable()
            self.state = 51
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==3:
                self.state = 47
                self.match(mapFilterParser.T__2)
                self.state = 48
                self.iterable()
                self.state = 53
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 54
            self.match(mapFilterParser.T__3)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FilterFunctionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def lambdaExpr(self):
            return self.getTypedRuleContext(mapFilterParser.LambdaExprContext,0)


        def iterable(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(mapFilterParser.IterableContext)
            else:
                return self.getTypedRuleContext(mapFilterParser.IterableContext,i)


        def getRuleIndex(self):
            return mapFilterParser.RULE_filterFunction

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFilterFunction" ):
                listener.enterFilterFunction(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFilterFunction" ):
                listener.exitFilterFunction(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFilterFunction" ):
                return visitor.visitFilterFunction(self)
            else:
                return visitor.visitChildren(self)




    def filterFunction(self):

        localctx = mapFilterParser.FilterFunctionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_filterFunction)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 56
            self.match(mapFilterParser.T__4)
            self.state = 57
            self.match(mapFilterParser.T__1)
            self.state = 58
            self.lambdaExpr()
            self.state = 59
            self.match(mapFilterParser.T__2)
            self.state = 60
            self.iterable()
            self.state = 65
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==3:
                self.state = 61
                self.match(mapFilterParser.T__2)
                self.state = 62
                self.iterable()
                self.state = 67
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 68
            self.match(mapFilterParser.T__3)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LambdaExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(mapFilterParser.ID)
            else:
                return self.getToken(mapFilterParser.ID, i)

        def function(self):
            return self.getTypedRuleContext(mapFilterParser.FunctionContext,0)


        def getRuleIndex(self):
            return mapFilterParser.RULE_lambdaExpr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLambdaExpr" ):
                listener.enterLambdaExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLambdaExpr" ):
                listener.exitLambdaExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLambdaExpr" ):
                return visitor.visitLambdaExpr(self)
            else:
                return visitor.visitChildren(self)




    def lambdaExpr(self):

        localctx = mapFilterParser.LambdaExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_lambdaExpr)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 70
            self.match(mapFilterParser.T__5)
            self.state = 71
            self.match(mapFilterParser.ID)
            self.state = 76
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==3:
                self.state = 72
                self.match(mapFilterParser.T__2)
                self.state = 73
                self.match(mapFilterParser.ID)
                self.state = 78
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 79
            self.match(mapFilterParser.T__6)
            self.state = 80
            self.function()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunctionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(mapFilterParser.ID)
            else:
                return self.getToken(mapFilterParser.ID, i)

        def op(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(mapFilterParser.OpContext)
            else:
                return self.getTypedRuleContext(mapFilterParser.OpContext,i)


        def var(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(mapFilterParser.VarContext)
            else:
                return self.getTypedRuleContext(mapFilterParser.VarContext,i)


        def STRING(self, i:int=None):
            if i is None:
                return self.getTokens(mapFilterParser.STRING)
            else:
                return self.getToken(mapFilterParser.STRING, i)

        def iterable(self):
            return self.getTypedRuleContext(mapFilterParser.IterableContext,0)


        def function(self):
            return self.getTypedRuleContext(mapFilterParser.FunctionContext,0)


        def INT(self):
            return self.getToken(mapFilterParser.INT, 0)

        def getRuleIndex(self):
            return mapFilterParser.RULE_function

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunction" ):
                listener.enterFunction(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunction" ):
                listener.exitFunction(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunction" ):
                return visitor.visitFunction(self)
            else:
                return visitor.visitChildren(self)




    def function(self):

        localctx = mapFilterParser.FunctionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_function)
        self._la = 0 # Token type
        try:
            self.state = 162
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,11,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 82
                self.match(mapFilterParser.ID)
                self.state = 83
                self.op()
                self.state = 84
                self.var()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 86
                self.match(mapFilterParser.ID)
                self.state = 87
                self.op()
                self.state = 88
                self.match(mapFilterParser.STRING)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 90
                self.match(mapFilterParser.ID)
                self.state = 91
                self.match(mapFilterParser.T__7)
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 92
                self.match(mapFilterParser.ID)
                self.state = 93
                self.match(mapFilterParser.T__8)
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 94
                self.match(mapFilterParser.ID)
                self.state = 95
                self.match(mapFilterParser.T__9)
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 96
                self.match(mapFilterParser.T__10)
                self.state = 99
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
                if la_ == 1:
                    self.state = 97
                    self.match(mapFilterParser.ID)
                    pass

                elif la_ == 2:
                    self.state = 98
                    self.iterable()
                    pass


                self.state = 101
                self.match(mapFilterParser.T__3)
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 102
                self.match(mapFilterParser.T__11)
                self.state = 103
                self.match(mapFilterParser.ID)
                self.state = 104
                self.match(mapFilterParser.T__3)
                self.state = 108
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if (((_la) & ~0x3f) == 0 and ((1 << _la) & 8280394956800) != 0):
                    self.state = 105
                    self.op()
                    self.state = 106
                    self.var()


                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 110
                self.match(mapFilterParser.T__12)
                self.state = 111
                self.match(mapFilterParser.ID)
                self.state = 112
                self.match(mapFilterParser.T__3)
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 113
                self.match(mapFilterParser.T__13)
                self.state = 114
                self.match(mapFilterParser.ID)
                self.state = 115
                self.match(mapFilterParser.T__3)
                pass

            elif la_ == 10:
                self.enterOuterAlt(localctx, 10)
                self.state = 116
                self.match(mapFilterParser.T__14)
                self.state = 117
                self.match(mapFilterParser.ID)
                self.state = 118
                self.match(mapFilterParser.T__3)
                pass

            elif la_ == 11:
                self.enterOuterAlt(localctx, 11)
                self.state = 119
                self.match(mapFilterParser.ID)
                self.state = 120
                self.match(mapFilterParser.T__15)
                self.state = 121
                self.match(mapFilterParser.STRING)
                self.state = 122
                self.match(mapFilterParser.T__2)
                self.state = 123
                self.match(mapFilterParser.STRING)
                self.state = 124
                self.match(mapFilterParser.T__3)
                pass

            elif la_ == 12:
                self.enterOuterAlt(localctx, 12)
                self.state = 125
                self.match(mapFilterParser.ID)
                self.state = 126
                self.match(mapFilterParser.T__16)
                self.state = 127
                self.match(mapFilterParser.STRING)
                self.state = 128
                self.match(mapFilterParser.T__3)
                pass

            elif la_ == 13:
                self.enterOuterAlt(localctx, 13)
                self.state = 129
                self.match(mapFilterParser.ID)
                self.state = 130
                self.match(mapFilterParser.T__17)
                self.state = 133
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
                if la_ == 1:
                    self.state = 131
                    self.iterable()
                    pass

                elif la_ == 2:
                    self.state = 132
                    self.match(mapFilterParser.ID)
                    pass


                self.state = 135
                self.match(mapFilterParser.T__3)
                pass

            elif la_ == 14:
                self.enterOuterAlt(localctx, 14)
                self.state = 136
                self.match(mapFilterParser.T__18)
                self.state = 137
                self.match(mapFilterParser.ID)
                self.state = 138
                self.match(mapFilterParser.T__3)
                pass

            elif la_ == 15:
                self.enterOuterAlt(localctx, 15)
                self.state = 139
                self.match(mapFilterParser.T__19)
                self.state = 140
                self.match(mapFilterParser.ID)
                self.state = 141
                self.match(mapFilterParser.T__3)
                pass

            elif la_ == 16:
                self.enterOuterAlt(localctx, 16)
                self.state = 142
                self.match(mapFilterParser.ID)
                self.state = 143
                self.op()
                self.state = 144
                self.var()
                self.state = 145
                self.op()
                self.state = 146
                self.var()
                self.state = 148
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==21 or _la==22:
                    self.state = 147
                    _la = self._input.LA(1)
                    if not(_la==21 or _la==22):
                        self._errHandler.recoverInline(self)
                    else:
                        self._errHandler.reportMatch(self)
                        self.consume()


                self.state = 151
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if (((_la) & ~0x3f) == 0 and ((1 << _la) & 68721113088) != 0):
                    self.state = 150
                    self.function()


                pass

            elif la_ == 17:
                self.enterOuterAlt(localctx, 17)
                self.state = 153
                self.match(mapFilterParser.ID)
                self.state = 154
                self.match(mapFilterParser.T__22)
                self.state = 155
                self.match(mapFilterParser.INT)
                self.state = 156
                self.match(mapFilterParser.T__23)
                self.state = 160
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if (((_la) & ~0x3f) == 0 and ((1 << _la) & 8280394956800) != 0):
                    self.state = 157
                    self.op()
                    self.state = 158
                    self.var()


                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class OpContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ADD(self):
            return self.getToken(mapFilterParser.ADD, 0)

        def SUB(self):
            return self.getToken(mapFilterParser.SUB, 0)

        def MUL(self):
            return self.getToken(mapFilterParser.MUL, 0)

        def DIV(self):
            return self.getToken(mapFilterParser.DIV, 0)

        def ID(self):
            return self.getToken(mapFilterParser.ID, 0)

        def getRuleIndex(self):
            return mapFilterParser.RULE_op

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOp" ):
                listener.enterOp(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOp" ):
                listener.exitOp(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitOp" ):
                return visitor.visitOp(self)
            else:
                return visitor.visitChildren(self)




    def op(self):

        localctx = mapFilterParser.OpContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_op)
        try:
            self.state = 179
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [41]:
                self.enterOuterAlt(localctx, 1)
                self.state = 164
                self.match(mapFilterParser.ADD)
                pass
            elif token in [42]:
                self.enterOuterAlt(localctx, 2)
                self.state = 165
                self.match(mapFilterParser.SUB)
                pass
            elif token in [39]:
                self.enterOuterAlt(localctx, 3)
                self.state = 166
                self.match(mapFilterParser.MUL)
                pass
            elif token in [40]:
                self.enterOuterAlt(localctx, 4)
                self.state = 167
                self.match(mapFilterParser.DIV)
                pass
            elif token in [25]:
                self.enterOuterAlt(localctx, 5)
                self.state = 168
                self.match(mapFilterParser.T__24)
                pass
            elif token in [26]:
                self.enterOuterAlt(localctx, 6)
                self.state = 169
                self.match(mapFilterParser.T__25)
                pass
            elif token in [27]:
                self.enterOuterAlt(localctx, 7)
                self.state = 170
                self.match(mapFilterParser.T__26)
                self.state = 171
                self.match(mapFilterParser.ID)
                self.state = 172
                self.match(mapFilterParser.T__27)
                pass
            elif token in [29]:
                self.enterOuterAlt(localctx, 8)
                self.state = 173
                self.match(mapFilterParser.T__28)
                pass
            elif token in [30]:
                self.enterOuterAlt(localctx, 9)
                self.state = 174
                self.match(mapFilterParser.T__29)
                pass
            elif token in [31]:
                self.enterOuterAlt(localctx, 10)
                self.state = 175
                self.match(mapFilterParser.T__30)
                pass
            elif token in [32]:
                self.enterOuterAlt(localctx, 11)
                self.state = 176
                self.match(mapFilterParser.T__31)
                pass
            elif token in [33]:
                self.enterOuterAlt(localctx, 12)
                self.state = 177
                self.match(mapFilterParser.T__32)
                pass
            elif token in [34]:
                self.enterOuterAlt(localctx, 13)
                self.state = 178
                self.match(mapFilterParser.T__33)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IterableContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def list_(self):
            return self.getTypedRuleContext(mapFilterParser.ListContext,0)


        def tuple_(self):
            return self.getTypedRuleContext(mapFilterParser.TupleContext,0)


        def ID(self):
            return self.getToken(mapFilterParser.ID, 0)

        def getRuleIndex(self):
            return mapFilterParser.RULE_iterable

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIterable" ):
                listener.enterIterable(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIterable" ):
                listener.exitIterable(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIterable" ):
                return visitor.visitIterable(self)
            else:
                return visitor.visitChildren(self)




    def iterable(self):

        localctx = mapFilterParser.IterableContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_iterable)
        try:
            self.state = 184
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [23]:
                self.enterOuterAlt(localctx, 1)
                self.state = 181
                self.list_()
                pass
            elif token in [2]:
                self.enterOuterAlt(localctx, 2)
                self.state = 182
                self.tuple_()
                pass
            elif token in [36]:
                self.enterOuterAlt(localctx, 3)
                self.state = 183
                self.match(mapFilterParser.ID)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def elements(self):
            return self.getTypedRuleContext(mapFilterParser.ElementsContext,0)


        def getRuleIndex(self):
            return mapFilterParser.RULE_list

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterList" ):
                listener.enterList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitList" ):
                listener.exitList(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitList" ):
                return visitor.visitList(self)
            else:
                return visitor.visitChildren(self)




    def list_(self):

        localctx = mapFilterParser.ListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_list)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 186
            self.match(mapFilterParser.T__22)
            self.state = 188
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 515404464132) != 0):
                self.state = 187
                self.elements()


            self.state = 190
            self.match(mapFilterParser.T__23)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TupleContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def elements(self):
            return self.getTypedRuleContext(mapFilterParser.ElementsContext,0)


        def getRuleIndex(self):
            return mapFilterParser.RULE_tuple

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTuple" ):
                listener.enterTuple(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTuple" ):
                listener.exitTuple(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTuple" ):
                return visitor.visitTuple(self)
            else:
                return visitor.visitChildren(self)




    def tuple_(self):

        localctx = mapFilterParser.TupleContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_tuple)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 192
            self.match(mapFilterParser.T__1)
            self.state = 194
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 515404464132) != 0):
                self.state = 193
                self.elements()


            self.state = 196
            self.match(mapFilterParser.T__3)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ElementsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(mapFilterParser.ExprContext)
            else:
                return self.getTypedRuleContext(mapFilterParser.ExprContext,i)


        def iterable(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(mapFilterParser.IterableContext)
            else:
                return self.getTypedRuleContext(mapFilterParser.IterableContext,i)


        def getRuleIndex(self):
            return mapFilterParser.RULE_elements

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterElements" ):
                listener.enterElements(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitElements" ):
                listener.exitElements(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitElements" ):
                return visitor.visitElements(self)
            else:
                return visitor.visitChildren(self)




    def elements(self):

        localctx = mapFilterParser.ElementsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_elements)
        self._la = 0 # Token type
        try:
            self.state = 214
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [35, 37, 38]:
                self.enterOuterAlt(localctx, 1)
                self.state = 198
                self.expr()
                self.state = 203
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==3:
                    self.state = 199
                    self.match(mapFilterParser.T__2)
                    self.state = 200
                    self.expr()
                    self.state = 205
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
